# libflash_attn

./: CMakeLists.txt
include/: common.h  logging.h  tensor.h  util.h
src/: CMakeLists.txt  flash.cu  main.cpp
